# TasksWithGtest

./: CMakeLists.txt  README.md
include/: headers.h  task1.h  task2.h  task3.h  task4.h
src/: main.cpp  task4.cpp
tests/: test.cpp
